RESOLVED FIXED204196
[LFC][Invalidation] Skip non-dirty out-of-flow boxes.
https://bugs.webkit.org/show_bug.cgi?id=204196
Summary [LFC][Invalidation] Skip non-dirty out-of-flow boxes.
alan
Reported 2019-11-14 06:49:47 PST
use InvalidationState.
Attachments
Patch (1.68 KB, patch)
2019-11-14 07:01 PST, alan
no flags
Patch (1.68 KB, patch)
2019-11-14 11:47 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-14 06:51:47 PST
alan
Comment 2 2019-11-14 07:01:01 PST
alan
Comment 3 2019-11-14 11:47:35 PST
WebKit Commit Bot
Comment 4 2019-11-14 12:32:45 PST
Comment on attachment 383566 [details] Patch Clearing flags on attachment: 383566 Committed r252462: <https://trac.webkit.org/changeset/252462>
WebKit Commit Bot
Comment 5 2019-11-14 12:32:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.