[LFC][Invalidation] Skip non-dirty out-of-flow boxes. https://bugs.webkit.org/show_bug.cgi?id=204196

Reviewed by Antti Koivisto.

Use the InvalidationState to decide whether the current out-of-flow box needs layout.

* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::layoutOutOfFlowContent):


Canonical link: https://commits.webkit.org/217502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252462 268f45cc-cd09-0410-ab3c-d52691b4dbfc